# ecosystemsim-cpp

./: CMakeLists.txt  main.cpp
inc/: City.h  EmptySpace.h  GameSpecs.h  Human.h  Organism.h  Zombie.h
src/: City.cpp  EmptySpace.cpp  Human.cpp  Organism.cpp  Zombie.cpp
